# cognis-relay

./: .gitignore  CHANGELOG.md  NOTICE  README.md  RESULTS.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  evaluate.py  run_all.py
cognis_relay/: __init__.py  cli.py  pace.py
docs/: ARCHITECTURE.md  LIMITATIONS.md  SOLIC_CA7_MAPPING.md  USAGE.md
examples/: outages.json  sample_plan.json
hoplink/: __init__.py  analysis.py  cli.py  failover.py  linkbudget.py  model.py  pace.py  report.py  synth.py
tests/: test_analysis.py  test_cli.py  test_failover_edge.py  test_linkbudget.py  test_model.py  test_pace_scoring.py  test_relay.py  test_report.py
