[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hoplink"
version = "0.2.0"
description = "BLOS PACE communications validator & failover simulator — Hoplink"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["pace", "blos", "communications", "satcom", "failover", "resilience", "cognis"]
license = { text = "COCL-1.0" }
dependencies = []

[project.urls]
Homepage = "https://cognis.digital"

[project.scripts]
hoplink = "hoplink.cli:main"

[tool.setuptools]
packages = ["hoplink"]

[tool.pytest.ini_options]
testpaths = ["tests"]
